--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "react-programmable-chat",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "server": "node index.js",
-    "client": "node start-client.js",
-    "start": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "keywords": [],
-  "author": "lcordier42",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "1.17.1",
-    "express": "4.15.2",
-    "twilio": "3.0.0rc.14"
-  },
-  "devDependencies": {
-    "concurrently": "3.4.0",
-    "dotenv": "4.0.0"
-  }
+    "name": "twilio-chat",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "server": "node index.js",
+        "client": "node start-client.js",
+        "start": "concurrently \"npm run server\" \"npm run client\""
+    },
+    "keywords": [],
+    "author": "lcordier42",
+    "dependencies": {
+        "body-parser": "1.17.1",
+        "express": "4.15.2",
+        "twilio": "3.6.7"
+    },
+    "devDependencies": {
+        "concurrently": "3.4.0",
+        "dotenv": "4.0.0"
+    }
 }
